--- a/Day10/grid.css
+++ b/Day10/grid.css
@@ -3,8 +3,14 @@
     height:300px;
     background-color:black;
     display: grid;
-    grid-template-rows: 60px 60px 60px;
-    grid-template-columns: 100px 100px 100px;
+    /* grid-template-rows: 60px 60px 60px ; */
+    /* grid-template-columns: auto auto auto auto auto ;   bad practice */
+    /* grid-template-columns: 100px 100px 100px ; */
+    grid-template-rows: repeat(4,1fr);
+    grid-template-columns: repeat(3,1fr);
+    /* row-gap: 10px;
+    column-gap:10px */
+    grid-gap: 10px 10px;
 }
 .item{
     width:100px;
@@ -12,4 +18,10 @@
     background-color:green;
     border: 2px solid black;
     text-align: center;
+}
+.one{
+    /* grid-column-start: 1;
+    grid-column-end: 3; */
+    grid-column: 1/3;  /*Start 1 and end 3*/
+    background-color: green;
 }
