--- a/MINI PROJECT COMBINE HTML CSS/sidebar.css
+++ b/MINI PROJECT COMBINE HTML CSS/sidebar.css
@@ -1,18 +1,17 @@
-
-*{
+* {
     margin: 0;
     padding: 0;
-    font-family: 'poppins',sans-serif;
-    
+    font-family: 'poppins', sans-serif;
+
 }
 
-.main_box{
-       background: linear-gradient(90deg, #4d1f0f 0%, #000000 60%);
-       height: 100vh; 
-       background-size: cover;
+.main_box {
+    background: linear-gradient(90deg, #4d1f0f 0%, #000000 60%);
+    height: 100vh;
+    background-size: cover;
 }
 
-.btn_one i{
+.btn_one i {
     color: white;
     font-size: 30px;
     font-weight: 700;
@@ -23,7 +22,7 @@
     transition: all linear 0.3s;
 }
 
-.sidebar_menu{
+.sidebar_menu {
     position: fixed;
     left: -300px;
     height: 100vh;
@@ -34,14 +33,15 @@
 
 }
 
-.sidebar_menu .logo{
+.sidebar_menu .logo {
     position: absolute;
     width: 100%;
     line-height: 60px;
     box-shadow: 0 2px 4px rgba(255, 255, 255, 0.5);
     height: 60px;
 }
-.sidebar_menu .logo a{
+
+.sidebar_menu .logo a {
     position: absolute;
     left: 50px;
     text-decoration: none;
@@ -50,7 +50,7 @@
     color: white;
 }
 
-.sidebar_menu .btn_two i{
+.sidebar_menu .btn_two i {
     color: gray;
     font-size: 25px;
     line-height: 60px;
@@ -61,65 +61,75 @@
     transition: all linear 0.3s;
 }
 
-.sidebar_menu .menu{
+.sidebar_menu .menu {
     position: absolute;
     width: 100%;
-    top:80px;
+    top: 80px;
 }
 
-.sidebar_menu .menu li{
+.sidebar_menu .menu li {
     margin: 6px;
     padding: 14px 20px;
 }
-.sidebar_menu .menu i ,a{
+
+.sidebar_menu .menu i,
+a {
     color: white;
     text-decoration: none;
 }
-.sidebar_menu .menu i{
+
+.sidebar_menu .menu i {
     padding-right: 8px;
 }
 
-.sidebar_menu .social_media{
+.sidebar_menu .social_media {
     color: white;
     position: absolute;
     left: 20%;
     top: 93%;
 }
-.sidebar_menu .social_media i{
+
+.sidebar_menu .social_media i {
     color: white;
     opacity: 0.5;
-    padding:0.5px;
+    padding: 0.5px;
 }
-#check{
+
+#check {
     display: none;
 }
-.sidebar_menu .menu li:hover{
-  box-shadow: 0 0 6px rgba(255, 255, 255, 0.5);
-   cursor: pointer;
+
+.sidebar_menu .menu li:hover {
+    box-shadow: 0 0 6px rgba(255, 255, 255, 0.5);
+    cursor: pointer;
 }
 
-.btn_one i:hover{
+.btn_one i:hover {
     font-size: 40px;
     cursor: pointer;
-    
-}
-.btn_two i:hover{
-    font-size: 30px;   
-     cursor: pointer;
+
 }
 
-.sidebar_menu .social_media i:hover{
+.btn_two i:hover {
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.sidebar_menu .social_media i:hover {
     opacity: 1;
     transform: scale(1.1);
 }
 
-#check:checked ~.sidebar_menu{
-     left: 0;
+#check:checked~.sidebar_menu {
+    left: 0;
+    background: linear-gradient(50deg, #4d1f0f 0%, #000000 60%);
+    z-index: 1;
 }
 
-#check:checked ~.btn_one i{
+#check:checked~.btn_one i {
     opacity: 0;
 }
-#check:checked ~ .sidebar_menu .btn_two i{
+
+#check:checked~.sidebar_menu .btn_two i {
     opacity: 1;
 }
