--- a/MINI PROJECT COMBINE HTML CSS/containt-box.css
+++ b/MINI PROJECT COMBINE HTML CSS/containt-box.css
@@ -15,7 +15,7 @@
     height: 600px;
     width: 80%;
     border-radius: 30px;
-    /* padding-top: 50px; */
+    padding-top: 50px;
 }
 
 .containt-box .retouch {
