--- a/MINI PROJECT COMBINE HTML CSS/main.css
+++ b/MINI PROJECT COMBINE HTML CSS/main.css
@@ -1,6 +1,7 @@
 .main {
     background: linear-gradient(90deg, #4d1f0f 0%, #000000 60%);
     /* height: 100vh; */
+    /* width: 900px; */
     background-size: cover;
     margin: 0;
     padding: 0;
